# neo

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE.md  MANIFEST.in  NeodroidPackage.py  README.md  __init__.py  build_and_upload_package.sh  environment.yaml  requirements-gui.txt  requirements.txt  requirements_gui.txt  requirements_tests.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/utilities/: collect_env.py
.github/workflows/: publish-to-test-pypi.yml  pythonpackage.yml
.pyre/: pyre.stderr
.ropeproject/: config.py
Neodroid.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
docs/: .gitignore  CNAME  Makefile  README.md  index.html  make.bat  make.sh
docs/source/: conf.py  index.rst
documentation/: Makefile  make.bat
documentation/source/: conf.py  index.rst
entry_points/: cli.py
example/guiclient/: __init__.py  gui.py  main.py  simplezmqclient.py  simplezmqserver.py  test.py  utilities.py
example/minimal/: curriculum.py  minimal.py
neodroid/: README.md  __init__.py  batched_neodroid_environments.py  cli.py  environment.py  neodroid_environment.py  neodroid_environments.py  networking_environment.py  version.py
requirements/: requirements_dev.txt
samples/: action_space_sampling.py  image_observation_plot.py  multi_armed_bandit.py
scripts/: build_and_upload_package.sh
tests/: req_unit_test.py  test_feature_transformations.py  test_imports.py  test_interface.py  test_multi_environment.py  test_sanity.py
(+786 files in other folders)
