[easy_install]

[aliases]
test=pytest

[bdist_wheel]
python-tag = py36

[metadata]
license_file = LICENSE.md

#[options]
#zip_safe = False
#include_package_data = True
#packages = find:
#scripts =
#  bin/first.py
#  bin/second.py
#install_requires =
#  requests; platform_system == "Windows"'
#  importlib; python_version == "2.6"